footer fix gap

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -12,7 +12,7 @@
 .footer-list {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 25px;
   list-style-type: none;
 }
 .footer-list-item {
